--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -76,3 +76,208 @@
     border-bottom: 1px dashed gray;
     font-size: 15px;
 }
+
+.chatImg {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 1px solid white;
+}
+
+.modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed; /* Fixa o modal no topo da página */
+    z-index: 1; /* Coloca o modal acima de todos os outros elementos */
+    left: 0;
+    top: 0;
+    width: 100%; /* Largura total */
+    height: 100%; /* Altura total */
+    overflow: auto; /* Habilita o scroll se necessário */
+    background-color: rgb(0,0,0); /* Fundo preto */
+    background-color: rgba(0,0,0,0.4); /* Fundo preto com opacidade */
+}
+
+.modalContent {
+    width: 75%;
+    height: 75%;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-areas: "A B";
+}
+
+.comments {
+    flex-direction: column;
+    overflow-y: auto;
+    max-height: 325px;
+    max-width: 100%;
+    margin-left: 0;
+}
+
+.comment {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    max-width: 100%;
+    flex-direction: row;
+    margin-right: 175px;
+    margin-bottom: 5px;
+    max-height: 400px;
+    word-wrap: break-word;
+}
+
+p{
+    max-width: 100%;
+}
+
+.form {
+    flex-direction: column;
+    width: 100%;
+    grid-area: B;
+
+}
+
+.input {
+    border: none;
+    border-bottom: 1px solid black;
+    border-radius: 0;
+    width: 200px;
+}
+
+.container {
+    width: 75%;
+    height: 75%;
+    display: flex;
+    box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 9px;
+}
+
+.login-form {
+    width: 65%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
+    border-radius: 9px 0 0 9px;
+    background-color: #fff;
+}
+
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.title {
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 21px;
+    text-align: center;
+    color: #2B2B2F;
+    margin-bottom: 10px;
+}
+
+.description {
+    max-width: 80%;
+    margin: auto;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 14px;
+    text-align: center;
+    color: #5F5D6B;
+}
+
+
+
+.input_field {
+    width: 75%;
+    margin-left: 25px;
+    margin-bottom: 10px;
+    height: 40px;
+    padding: 0 0 0 40px;
+    border-radius: 7px;
+    outline: none;
+    border: 1px solid #e5e5e5;
+    filter: drop-shadow(0px 1px 0px #efefef) drop-shadow(0px 1px 0.5px rgba(239, 239, 239, 0.5));
+    transition: all 0.3s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.input_field:focus {
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 0px 2px #115DFC;
+    background-color: transparent;
+}
+
+.sign-in_btn {
+    display: flex;
+    margin-left: 45px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    width: 75%;
+    height: 36px;
+    background: linear-gradient(90deg, #e47e0d 0%, #db55be 100%);
+    box-shadow: 0px 0.5px 0.5px #EFEFEF, 0px 1px 0.5px rgba(239, 239, 239, 0.5);
+    border-radius: 5px;
+    border: 0;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 15px;
+    color: #ffffff;
+    transition: all 0.6s cubic-bezier(0.15, 0.83, 0.66, 1);
+}
+
+.sign-in_btn:hover {
+    transform: scale(1.01) translateY(-2px);
+    box-shadow: 0 10px 20px 0#054eed6b;
+}
+
+.testimonial {
+    width: 30%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    background: linear-gradient(358.31deg, #fff -24.13%, hsla(0, 0%, 100%, 0) 338.58%), linear-gradient(89.84deg, rgba(230, 36, 174, .15) .34%, rgba(94, 58, 255, .15) 16.96%, rgba(10, 136, 255, .15) 34.66%, rgba(75, 191, 80, .15) 50.12%, rgba(137, 206, 0, .15) 66.22%, rgba(239, 183, 0, .15) 82%, rgba(246, 73, 0, .15) 99.9%);
+    border-radius: 0 9px 9px 0;
+}
+
+#picture{
+    margin-left: 175px;
+}
+
+.fechar {
+    position: absolute;
+    background-color: #DE6286;
+    color: white;
+    float: right;
+    margin-bottom: 31%;
+    margin-left: 85%;
+    font-size: 18px;
+    height: 48px;
+    width: 100px;
+    font-weight: bold;
+    border: none;
+    border-radius: 10%;
+}
+
+.fechar:hover,
+.fechar:focus {
+    background-color: #e76666;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.fechar:active {
+    transform: scale(0.95);
+  }
